@@ -1,6 +1,12 @@
 2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* schemas/desktop_gnome_lockdown.schemas.in:
+	Add key to disable the screensaver. Patch from
+	Guillaume Desmottes. Closes bug #386864.
+
+2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* schemas/desktop_gnome_lockdown.schemas.in:
 	Add key to make it possible to disable user switching.
 	Patch from Guillaume Desmottes. Closes bug #385119.
 
